--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
       url: git://github.com/google/charts.git
       path: charts_flutter
   flutter_bloc: ^7.3.0
+  flame: ^1.0.0-releasecandidate.14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
